--- a/README.rmd
+++ b/README.rmd
@@ -1,74 +1,76 @@
 ---
-title: "README.rmd"
-output: html_document
+title: "Thread Analisys"
+author: "J.P.G."
+date: "Summer 2018"
+output:
+  html_document:
+    toc: yes
+  html_notebook:
+    highlight: pygments
+    number_sections: yes
+    theme: spacelab
+    toc: yes
+    toc_float: no
 ---
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
-```
-
-## R Markdown
-
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-# OMNIPRESCENSE
-
-[cat]
-## **INTRO**
-El projecte tracta en fer un package de R que obtindrà informació pública a internet per alimentar un sistema de tractament de dades (ja siguin IPs, dates, dominis) que permeti interacció amb l'usuari que l'està fent servir. Per aquest package de R s'ha d'entendre els següents conceptes:
-* Data scope
-* Sources
-* Features/Functionalities
-
-### **Data Scope**
-
-Entenem Data Scope com a quins tipus de dades s'acceptaran en el package de R. Per començar i en funció de les complicacions del projecte, el Data Scope serà únicament adreces IP que tinguin certes dades, com pot ser (a ser posible): data, geolocalització, tipus de llista a la que pertany(campanya de malware, C&C, malware distribution, whatever),+ FALTA ACABAR DE DEFINIR.
-
-### **Sources**
-
-Donat que el Data Scope només és IPs, farem servir la següent pàgina web per obtenir informació de diferents llistes de IPs de diferents proveïdors de seguretat:
-https://iplists.firehol.org/
-
-### **Features/Functionalities**
-
-A continuació hi ha un llistat de les posibles funcionalitats que es volen implementar:
-	- Cercar en funció de la categoria (campanya concreta, anonimitzadors, distribuidor de malware,whatever)
-	- Obtenir informació d'una IP en concret i veure posibles relacions properes en funció de la semblança amb altres IPs (campanya compartida, distancia del rang de IP, ASN,whatever)
-	
-## **Conclusió final**
-
-El package en R servirà per poder navegar en funció de les dades que tenim i poder treure conclusions sobre la maliciositat de la informació del Data Scope. Tota aquesta informació obtinguda fent servir el package en R es farà servir per realitzar un informe en que es puguin veure diferents casos com els comentat anteriorment.
-
-----
-
-[eng]
-
-How nice it would be being able to know with high fidelity weather an IP is malicious or not, and its relations from different malware campaigns, botnets, anonymizer, whatever… This project consists on creating a new R package that will get information from public sources to feed a data analysis system that will let a user to interact using some functionalities. In order to understand this R package you gotta know:
-	- Data Scope
-	- Sources
-	- Functionalities
-
-### **Data Scope**
-
-We understand Data Scope as what different kind of data will be accepted in the R package. At first and based on contributer's availability, the Data Scope will only be IP addresses with added data related to each one (e.g. date, geolocation, source, trustworthiness, campaign, etc.). The parameters will be decided later once we see our needs. 
-
-### **Sources**
-
-As the Data Scope is only IPs and its related information, we'll be using the following webpage to get information from different IP lists from different sources:
-https://iplists.firehol.org/
-
-### **Features/Functionalities**
-
-Here there is a list of possible functionalities that we'd like to develop. To be defined yet.
-	- Look for a category (campaign, anonymizers, malware distribution, whatever) which will return a list of IPs and more info.
-	- Get as much information as possible from an IP and from its relations (based on campaigns they shared, distance, ASN).
-
-## **Conclusió final**
-
-This R package will help security analysts to troubleshoot when doing incident hunting and incident response. The data obtained from the functionalities will be tested on a report and documented here.
+Search the Thread with *wst2()*
+=============================
 
 
+<h3 style="color:grey">Description</h3>
+<p>
+This package is ment to be used as in a SOC environment since it will allow you to search if an IP that you might have been detected is part of another network that perform another attacks. From the package itself you will be able to query IPs, Locations and what Kind of category it belongs to.
+</p>
 
-**RELEASE THE KRAKEN**
+<h3 style="color:grey">Usage</h3>
+  <div>
+  <code>wst2.list.country()</code><br>
+  <code>wst2.list.category()</code><br>
+  <code>wst2(country = "", category = "", host = "", ORDER = , COUNT = TRUE/FALSE)</code>
+  </div>
+
+<h3 style="color:grey">Arguments</h3>
+
+<table style="text-align:center; height: 50%; border-color: black; width: 70%;" border="1">
+<tbody>
+<tr>
+<td style="width: 10%; background-color:lightgreen">Arguments</td>
+<td style="width: 10%; background-color:lightgreen">Example</td>
+<td style="width: 60%; background-color:lightgreen">Description</td>
+</tr>
+<tr>
+<td style="width: 10%;">country</td>
+<td style="width: 10%;">wst2(country="ES")</td>
+<td style="width: 60%;">Let you choose the country to search for. List the countries executing:<code>wst2.list.country()</code>.</td>
+</tr>
+<tr>
+<td style="width: 10%;">host</td>
+<td style="width: 10%;">wst2(host='115.202.230.210')</td>
+<td style="width: 60%;">You can choose a known IP and search information about it which will print you from different categories that matched *if any*.</td>
+</tr>
+<tr>
+<td style="width: 10%;">category</td>
+<td style="width: 10%;">wst2(category="malware")</td>
+<td style="width: 60%;">Choose a category and print all the matching IPs with that category. List the categories executing:<code>wst2.list.category()</code>.</td>
+</tr>
+<tr>
+<td style="width: 10%;">SORT</td>
+<td style="width: 10%;">wst2(SORT="category")</td>
+<td style="width: 60%;">Sort from a chosen collumn</td>
+</tbody>
+</table>
+  
+  
+<h3 style="color:grey">Details and Requirements</h3>
+  * Install rmarkdown and tidyr package
+    * install.packages("rmarkdown")
+    * install.packages("tidyr")
+  * Execution of the script <a href="https://github.com/Poletee/Practica-DDS/blob/master/source_downloader.ps1">source_downloader.ps1</a> to get the lastest data.
+  * Internet Connection to upgrade the sources and query the service ( When implemented [v.1.5] ).
+
+  
+<h3 style="color:grey">Example</h3>
+  <p> TRY IT: </p>
+  <code>wst2(category = "anonymizers", host = "115.202.230.210")</code>
+
+<footer>[ Package beta version 1.0.0 JPG]</footer>
