added functions and explanations to readme

--- a/README.rmd
+++ b/README.rmd
@@ -1,6 +1,6 @@
 ---
 title: "Thread Analisys"
-author: "J.P.G. (Jodidos Por Guillem)"
+author: "J.P.G."
 date: "Summer 2018"
 output:
   html_document:
